# gensearch

./: CMakeLists.txt  DNA_search.h  README.md  count_long_search.cpp  dict_search.cpp  experimental_search.cpp  experimental_search.h  freq.h  gensearch.w  hume.hh  new_search.h  search_traits.h  small.txt  test_long_search.adb  test_long_search.cpp  test_search.adb  test_search.cpp  test_word_search.cpp  time_long_search.adb  time_long_search.cpp  time_word_search.cpp
counting_components/: counter.h  distcount.h  itercount.h
text/: long.txt
