cmake_minimum_required(VERSION 2.6)
project(gensearch)
add_executable(test_search test_search.cpp)
# add_executable(count_long_search count_long_search.cpp)
add_executable(experimental_search experimental_search.cpp)
add_executable(test_long_search test_long_search.cpp)
add_executable(test_word_search test_word_search.cpp)
add_executable(time_long_search time_long_search.cpp)
add_executable(time_word_search time_word_search.cpp)
