cmake_minimum_required(VERSION 2.6)
project(gensearch)
include_directories(counting_components)
add_executable(test_search test_search.cpp)
# add_executable(count_long_search count_long_search.cpp)
add_executable(experimental_search experimental_search.cpp)
add_executable(test_long_search test_long_search.cpp)
add_executable(test_word_search test_word_search.cpp)
add_executable(time_long_search time_long_search.cpp)
add_executable(time_word_search time_word_search.cpp)

set(Boost_NO_SYSTEM_PATHS ON)
find_package(Boost REQUIRED filesystem iostreams system test_exec_monitor)
set(BOOST_TEST_LIBS ${Boost_LIBRARIES})
include_directories(${Boost_INCLUDE_DIRS})

# add_executable(dict_search dict_search.cpp)
# target_compile_options(dict_search PRIVATE "-std=c++11")
# target_link_libraries(dict_search ${BOOST_TEST_LIBS})
